force-app/main/default/objects/Item_Para_Cota_o__c/Item_Para_Cota_o__c.object-meta.xml
<CustomObject>
    <description>Objeto designado para adicionar itens a serem cotados e/ou gerar pedido de retirada no estoque.</description>
    <label>Item Para Cotação</label>
    <nameField>
        <displayFormat>I.C {0000000}</displayFormat>
        <label>Itens</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens Para Cotação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>