force-app/main/default/objects/Item_Para_Cota_o__c/fields/Ativo_da_Ordem_de_Trabalho_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Ativo_da_Ordem_de_Trabalho_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo da Ordem de Trabalho Relacionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ativos_da_Ordem_de_Trabalho__c.Ordem_de_trabalho_Relacionada__c</field>
            <operation>equals</operation>
            <valueField>$Source.Ordem_de_trabalho__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ativos_da_Ordem_de_Trabalho__c</referenceTo>
    <relationshipLabel>Itens Para Cotação</relationshipLabel>
    <relationshipName>Itens_Para_Cota_o</relationshipName>
    <type>Lookup</type>
</CustomField>