force-app/main/default/objects/Item_Para_Cota_o__c/fields/Causa_Motivo_da_Substitui_o__c.field-meta.xml
<CustomField>
    <fullName>Causa_Motivo_da_Substitui_o__c</fullName>
    <label>Causa/Motivo da Substituição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUSENTE</fullName>
            </value>
            <value>
                <fullName>DANIFICADO POR TERCEIROS</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO CORRETIVA</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO PREVENTIVA</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>