force-app/main/default/objects/Item_Para_Cota_o__c/fields/ID_Tag__c.field-meta.xml
<CustomField>
    <fullName>ID_Tag__c</fullName>
    <formula>Ativo_da_Ordem_de_Trabalho_Relacionado__r.ID_Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID/Tag</label>
    <type>Text</type>
</CustomField>