force-app/main/default/objects/Item_Para_Cota_o__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <formula>Ativo_da_Ordem_de_Trabalho_Relacionado__r.Marca__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>