force-app/main/default/objects/Item_Para_Cota_o__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <formula>Ativo_da_Ordem_de_Trabalho_Relacionado__r.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>