force-app/main/default/objects/Item_Para_Cota_o__c/fields/N_mero_de_S_rie__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_S_rie__c</fullName>
    <formula>Ativo_da_Ordem_de_Trabalho_Relacionado__r.N_mero_de_S_rie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Série</label>
    <type>Text</type>
</CustomField>