force-app/main/default/objects/Item_Para_Cota_o__c/fields/Nome_da_Pe_a_Componente_etc__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Pe_a_Componente_etc__c</fullName>
    <label>Nome da Peça/Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>