force-app/main/default/objects/Item_Para_Cota_o__c/fields/Nome_do_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Ativo__c</fullName>
    <formula>Ativo_da_Ordem_de_Trabalho_Relacionado__r.Ativo_Relacionado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Ativo</label>
    <type>Text</type>
</CustomField>