force-app/main/default/objects/Item_Para_Cota_o__c/fields/Ordem_de_trabalho__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho__c</fullName>
    <label>Ordem de trabalho (desativado)</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Itens Para Cotação (desativado)</relationshipLabel>
    <relationshipName>Itens_Para_Cota_o</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>