force-app/main/default/objects/Item_Para_Cota_o__c/fields/Patrim_nio__c.field-meta.xml
<CustomField>
    <fullName>Patrim_nio__c</fullName>
    <formula>Ativo_da_Ordem_de_Trabalho_Relacionado__r.Patrim_nio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patrimônio</label>
    <type>Text</type>
</CustomField>