force-app/main/default/objects/Item_Para_Cota_o__c/fields/Valor_Sugerido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Sugerido__c</fullName>
    <label>Valor Unitário Sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>